test/pass/test_poly_rec.sest
module TestPolyRec = struct

  val rec pair<$a>(x : $a) : {$a, $a} =
    {x, x}

  and trues() =
    pair(true)

  and ones() =
    pair(1)

end
