test/fail/error_mutrec.sest
module ErrorMutrec = struct

  type foo =
    {int, bar}

  and baz<$a> =
    | Baz(foo, bar)

  and bar =
    {bool, baz<foo>}

end
